--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h1>Приветсувую на своей страничке!</h1>
   <img src="https://catherineasquithgallery.com/uploads/posts/2021-02/1612576541_160-p-tsifri-na-zelenom-fone-228.jpg" height="150">
   <br>
-  <p>Тут вы можете наблюдать за моими гениальными умениями создания этого сайта!</p>
+  <p>Тут вы можете наблюдать за моими гениальными умениями NNNNNсоздания этого сайта!</p>
 
 </body>
 </html>
